assets/css/main.css
/* ... */
/* Basic */

	@-ms-viewport {
		width: device-width;
	}

	body {
		background: #303238 url("images/bg01.png");
		font-family: 'Open Sans', sans-serif;
		color: #7b818c;
		font-weight: 400;
	}

		body.is-loading * {
			-moz-transition: none !important;
			-webkit-transition: none !important;
			-ms-transition: none !important;
			transition: none !important;
			-moz-animation: none !important;
			-webkit-animation: none !important;
			-ms-animation: none !important;
			animation: none !important;
		}

	input, select, textarea {
		font-family: 'Open Sans', sans-serif;
		color: #7b818c;
		font-weight: 400;
	}

	a {
		color: inherit;
		text-decoration: underline;
	}

		a:hover {
			text-decoration: none;
		}

	h1, h2, h3, h4, h5, h6 {
		font-weight: 800;
		letter-spacing: 0.04em;
		color: #696969 !important;
		margin: 0 0 1em 0;
	}

	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
		color: inherit;
		text-decoration: none;
		outline: 0;
	}

	h2 {
		font-size: 2em;
		margin: 0 0 1.5em 0;
		line-height: 1em;
	}

	h2.icon {
		line-height: 48px;
	}

	h2.icon:before {
		position: relative;
		top: 0.05em;
		margin-right: 0.5em;
		opacity: 0.25;
	}

	h3 {
		font-size: 1.35em;
		margin-top: 2em;
	}

	b, strong {
		color: #404248;
		font-weight: 700;
	}

	i, em {
		font-style: italic;
	}

	br.clear {
		clear: both;
	}

	sub {
		position: relative;
		top: 0.5em;
		font-size: 0.8em;
	}

	sup {
		position: relative;
		top: -0.5em;
		font-size: 0.8em;
	}

	hr {
		border: 0;
		border-top: solid 1px #ddd;
	}

	blockquote {
		border-left: solid 0.5em #ddd;
		padding: 1em 0 1em 2em;
		font-style: italic;
	}

	p, ul, ol, dl, table {
		margin-bottom: 2em;
	}

	.date {
		display: block;
		font-weight: 700;
		letter-spacing: 0.065em;
		font-size: 0.9em;
		color: #696969;
		margin: 0 0 0.25em 0;
	}

/* Section/Article */

	section > :last-child,
	article > :last-child,
	section:last-child,
	article:last-child {
		margin-bottom: 0;
	}

	header {
		margin: 0 0 2em 0;
	}

	header h2, header h3 {
		margin: 0 0 0.25em 0;
	}

	header p {
		display: block;
		font-weight: 700;
		letter-spacing: 0.065em;
		font-size: 0.9em;
		color: #696969;
		margin: 0;
	}

	header p strong {
		color: #404248;
		font-weight: 800;
	}

	footer {
		margin: 2.5em 0 0 0;
	}

	header.major {
		border-bottom: solid 1px #dbdbdb;
		margin: 0 0 3em 0;
	}

	header.major:after {
		content: '';
		display: block;
		border-top: solid 1px #dbdbdb;
		height: 8px;
	}

	header.major h2, header.major h3 {
		margin: 0 0 1.2em 0;
	}

	header.major p {
		margin: 0 0 1.5em 0;
		position: relative;
		top: -1em;
	}

/* Forms */

	form label {
		display: block;
		font-weight: 800;
		letter-spacing: 0.04em;
		color: #404248;
		margin: 0 0 1em 0;
		font-size: 0.8em;
	}

	form input[type="text"],
	form input[type="email"],
	form input[type="password"],
	form select,
	form textarea {
		-webkit-appearance: none;
		display: block;
		width: 100%;
		border-radius: 8px;
		border: solid 1px #eee;
	}

	form input[type="text"]:focus,
	form input[type="email"]:focus,
	form input[type="password"]:focus,
	form select:focus,
	form textarea:focus {
		box-shadow: 0 0 2px 1px #4091bf;
	}

	form input[type="text"],
	form input[type="email"],
	form input[type="password"] {
		line-height: 3em;
		padding: 0 1em;
	}

	form select {
		line-height: 3em;
		padding: 0 1em;
	}

	form textarea {
		min-height: 9em;
		padding: 1em;
	}

	form .formerize-placeholder,
	form ::-webkit-input-placeholder,
	form :-moz-placeholder,
	form ::-moz-placeholder,
	form :-ms-input-placeholder {
		color: #555 !important;
	}

	form ::-moz-focus-inner {
		border: 0;
	}

/* Tables */

	table {
		width: 100%;
	}

	table.default {
		width: 100%;
		font-size: 1.2em;
		font-weight: 700;
		color: #696969;
	}

	table.default tr:first-child {
		border-top: 0;
	}

	table.default td {
		text-align: left;
		padding: 0.5em 1em 0.5em 1em;
	}

	table.default th {
		text-align: left;
		padding: 0.5em 1em 0.5em 1em;
		font-weight: 800;
		letter-spacing: 0.04em;
		margin: 0 0 1em 0;
	}

	table.default thead {
		background: #404248;
		color: #fff;
	}

/* Image */

	.image {
		position: relative;
		display: inline-block;
	}

	.image img {
		display: block;
		width: 100%;
		border-radius: 8px;
	}

	.image:before {
		content: '';
		display: block;
		position: absolute;
		left: 0;
		top: 0;
		background: url("images/bg01.png");
		width: 100%;
		height: 100%;
		opacity: 0.75;
	}

	.image.fit {
		display: block;
		width: 100%;
	}

	.image.featured {
		display: block;
		width: 100%;
		margin: 0 0 2.5em 0;
	}

	.image.left {
		float: left;
		margin: 0 2em 2em 0;
	}

	.image.centered {
		display: block;
		margin: 0 0 2.5em 0;
	}

	.image.centered img {
		margin: 0 auto;
		width: auto;
	}

/* Button */

	input[type="button"],
	input[type="submit"],
	input[type="reset"],
	button,
	.button {
		background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2)), url("images/bg02.png");
		background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2)), url("images/bg02.png");
		background-image: -ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2)), url("images/bg02.png");
		background-image: linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2)), url("images/bg02.png");
		-moz-transition: background-color 0.2s ease-in-out;
		-webkit-transition: background-color 0.2s ease-in-out;
		-ms-transition: background-color 0.2s ease-in-out;
		transition: background-color 0.2s ease-in-out;
		-webkit-appearance: none;
		position: relative;
		display: inline-block;
		background-color: #4091bf;
		border-radius: 8px;
		box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.35), inset 0px 2px 1px 0px rgba(255, 255, 255, 0.35);
		text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.5);
		color: #fff !important;
		text-decoration: none;
		font-weight: 800;
		font-size: 0.95em;
		letter-spacing: 0.075em;
		padding: 1em 2em;
		outline: 0;
		border: 0;
		white-space: nowrap;
		cursor: pointer;
	}
/* ... */

